# backend-api

./: .gitignore  Cargo.toml  package.json  wrangler.toml
.cargo/: config.toml
src/: lib.rs
src/api/: auth.rs  guilds.rs  mod.rs
src/api/protected/: gateway.rs  mod.rs
src/durables/: bot_room.rs  mod.rs
src/middleware/: api_protect.rs  cookie_check.rs  mod.rs  requested_user.rs
src/services/: auth.rs  cookie.rs  database.rs  guilds.rs  mod.rs  user.rs
src/state/: app_state.rs  mod.rs  server_info.rs  user.rs
