[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Gilbert O. <giloe.dev@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features=['time', 'json'] }

worker = { version = "0.6", features = ['http', 'axum', "timezone", "tokio-postgres"] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["tracing", "form", "json", "query", "multipart", "macros" ] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower = { version = "0.5" }

wasm-bindgen = { version = "0.2.100", features = ["serde"] }
wasm-bindgen-futures = { version = "0.4.50" }
futures = { version = "0.3.30" }
futures-util = "0.3"
async-trait = "0.1"
reqwest = {version = "0.12.7", features = ["json"]}
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

urlencoding = "2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
cookie = { version = "0.18", features = [] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
getrandom = { version = "0.2.16", features = ["js"] }

tokio-postgres = { version = "0.7.13", features = ["js"], default-features = false }
tokio-postgres-utils = "0.2.0"
sea-query = { version = "0.32.6", default-features = false, features = ["backend-postgres"] }